# ROS-course

./: .gitmodules
1303/AM/: plan.txt
1303/AM/5/lab5/: CMakeLists.txt
1303/AM/5/lab5/heder/robot/: RobotBase.h  RobotHelper.h  RobotLost.h
1303/AM/5/lab5/source/: r1_node.cpp  r2_node.cpp
1303/AM/5/lab5/source/robot/: RobotBase.cpp  RobotHelper.cpp  RobotLost.cpp
1303/AM/RobotsBattle/: CMakeLists.txt
1303/AM/RobotsBattle/heder/message/: CommandInformation.h
1303/AM/RobotsBattle/heder/robot/base/: RobotBase.h  Service.h
1303/AM/RobotsBattle/heder/robot/factory/: RobotFactory.h
1303/AM/RobotsBattle/heder/robot/item/: Item.h
1303/AM/RobotsBattle/heder/robot/item/projectile/: Arrow.h  Projectile.h
1303/AM/RobotsBattle/heder/robot/item/weapon/: Bow.h  Sword.h  Weapon.h
1303/AM/RobotsBattle/heder/robot/warior/: RobotArcher.h  RobotCommander.h  RobotGuardian.h
1303/AM/RobotsBattle/heder/thread/: ThreadPool.h
1303/AM/RobotsBattle/source/: r1_node.cpp  r2_node.cpp
1303/AM/RobotsBattle/source/robot/base/: RobotBase.cpp  Service.cpp
1303/AM/RobotsBattle/source/robot/factory/: RobotFactory.cpp
1303/AM/RobotsBattle/source/robot/item/: Item.cpp
1303/AM/RobotsBattle/source/robot/item/projectile/: Arrow.cpp  Projectile.cpp
1303/AM/RobotsBattle/source/robot/item/weapon/: Bow.cpp  Sword.cpp  Weapon.cpp
1303/AM/RobotsBattle/source/robot/warior/: RobotArcher.cpp  RobotCommander.cpp  RobotGuardian.cpp
1303/AM/RobotsBattle/source/thread/: ThreadPool.cpp
1303/BE/cource work/irrlicht/: package.xml
1303/BE/cource work/irrlicht/launch/: run_all.launch
1303/BE/cource work/irrlicht/parms/: global_costmap_params.yaml
1303/BE/cource work/irrlicht/src/: controller.cpp  sauron.cpp
1303/DM/5/: CMakeLists.txt  package.xml
1303/DM/5/src/: gLost.cpp  gRescuer.cpp  gTest.cpp
1303/DR/5/: CMakeLists.txt  package.xml
1303/DR/5/include/: Bot.h  smart_bot.h  stupid_bot.h
1303/DR/5/src/: Bot.cpp  R2.cpp  smart_bot.cpp  stupid_bot.cpp
1303/DR/cource work/: Отчет по курсовой работе.docx
1303/DR/cource work/irrlicht/: CMakeLists.txt
1303/DR/cource work/irrlicht/parms/: costmap_common_params.yaml
1303/DR/cource work/irrlicht/src/: scene.cpp
1303/KA/4/: CMakeLists.txt  package.xml
1303/KA/4/launch/: run_lostrobot.launch
1303/KA/4/src/: lostrobot.cpp
1303/KA/4/world/: custom_world.world  maze5by5.pgm
1303/KA/5/: CMakeLists.txt  package.xml
1303/KA/5/launch/: start.launch
1303/KA/5/src/: searcher.cpp  walker.cpp
1303/LE/Killer/: CMakeLists.txt  package.xml  plan.txt  отчет_курсовая_работа.docx
1303/LE/Killer/box/: model.config  model.sdf
1303/LE/Killer/box_target_green/: model.sdf
1303/LE/Killer/box_target_red/: model.sdf
1303/LE/Killer/bullet/: model.config  model.sdf
1303/LE/Killer/include/: Robot.h  Sense.h
1303/LE/Killer/killer/: CMakeLists.txt  package.xml
1303/LE/Killer/laser_scan/: CMakeLists.txt  package.xml
1303/LE/Killer/src/: Robot.cpp  Sense.cpp  killer.cpp  sense.cpp
1303/LE/Killer/youbot/: model.sdf
1303/NK/curs/: report.docx  план.txt
1303/NK/curs/ros_starcraft/: CMakeLists.txt  package.xml
1303/PV/: PLAN.md
1303/PV/3/: config.rviz
1303/PV/3/lab3_clever_robot/: CMakeLists.txt  package.xml
1303/PV/3/lab3_clever_robot/src/: clever_robot.cpp
1303/PV/3/lab3_stupid_robot/: CMakeLists.txt  package.xml
1303/PV/3/lab3_stupid_robot/src/: stupid_robot.cpp
1303/ShV/1/: CMakeLists.txt  package.xml
1303/ShV/1/src/: first.cpp
1303/ShV/4/mover/: CMakeLists.txt  package.xml
1303/ShV/5/: CMakeLists.txt  package.xml
1303/ShV/5/src/: searcher.cpp  walker.cpp
1303/ShV/RobotsBattles/: Plan.txt
1303/VA/4/: CMakeLists.txt  package.xml
1303/VA/5/: CMakeLists.txt  package.xml
1303/VA/cours/: CMakeLists.txt  package.xml  Васильев А.В. Курсовая ROS.docx
1303/VA/cours/src/: sheep.cpp  stop.cpp  wolf.cpp
1303/ZD/5/lost_robot/: CMakeLists.txt  package.xml
1303/ZD/5/lost_robot/src/: lost_robot.cpp
1303/ZD/5/robot_simulator/: CMakeLists.txt  package.xml
1303/ZD/5/robot_simulator/launch/: empty_world.launch
1304/DaA/: План курсовой работы.md
1304/DaA/4/: CMakeLists.txt  package.xml
1304/DaA/4/launch/: launchrobot.launch
1304/DaA/4/src/: my_robot.cpp
1304/DaA/4/world/: bitmap.pgm  custom_world.world
1304/DaA/5/: package.xml
1304/DeA/4/: CMakeLists.txt  package.xml
1304/DeA/5/: CMakeLists.txt  package.xml
1304/GE/3/: CMakeLists.txt  package.xml
1304/GE/4/: CMakeLists.txt  package.xml
1304/GE/4/launch/: launch.launch
1304/GE/4/src/: teleop.cpp
1304/GE/4/world/: mapa.world  new_world.pgm
1304/GE/5/: CMakeLists.txt  package.xml
1304/GE/5/src/: robot.cpp  robot.h
1304/KN/5/robot_gazebo/: CMakeLists.txt  package.xml
1304/KN/5/robot_gazebo/src/: robot_gazebo.cpp
1304/KS/4/: CMakeLists.txt  package.xml
1304/KS/4/launch/: run.launch
1304/KS/4/src/: pathplanner.cpp
1304/KS/4/world/: world.pgm  world.world
1304/KS/5/: CMakeLists.txt  package.xml
1304/KS/5/src/: assistant.cpp  missing.cpp  robot.cpp  robot.h
1304/KS/course/: plan.txt  отчет.docx
1304/KS/course/src/: CMakeLists.txt  package.xml
1304/KS/course/src/model/create/: model.sdf
1304/KS/course/src/src/: cleaner.h  keyword.cpp  main.cpp  robot.cpp  robot.h
1304/MI/1/: CMakeLists.txt  package.xml
1304/MI/3/: CMakeLists.txt  package.xml
1304/MI/3/src/: Robot.cpp  Robot.h  finder_robot.cpp  lost_robot.cpp
1304/MI/4/: CMakeLists.txt  package.xml
1304/MI/4/launch/: moving_robot.launch
1304/MI/4/src/: moving_robot.cpp
1304/MI/4/world/: custom.world  my_world.pgm
1304/MI/5/: CMakeLists.txt  package.xml
1304/MI/5/launch/: start.launch
1304/MI/5/src/: finderRobot.cpp  lostRobot.cpp
1304/MN/3/: CMakeLists.txt  package.xml
1304/MN/3/src/: LostRobot.cpp  PatrolRobot.cpp
1304/MN/4/: CMakeLists.txt  package.xml
1304/MN/4/launch/: robot.launch
1304/MN/4/src/: robot.cpp
1304/MN/4/world/: my_world.world
1304/MN/5/: CMakeLists.txt  package.xml
1304/MN/5/includes/: robot_info.h
1304/MN/5/src/: finder.cpp  lost.cpp  robot_info.cpp
1304/UA/ros_lab_common/: CMakeLists.txt
(+127 files in other folders)
