<?xml version="1.0"?>
<package>
  <name>lab5</name>
  <version>0.0.0</version>
  <description>The lab5 package</description>

  <maintainer email="lizik@todo.todo">lizik</maintainer>

  <license>TODO</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>