<?xml version="1.0"?>
<package>
  <name>moving_robot</name>
  <version>1.0.0</version>
  <description>The moving robot package</description>
  <maintainer email="ismikhaylov@yandex.ru">ismik</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>map_merger</run_depend>

</package>