<?xml version="1.0"?>
<package>
  <name>twoRobots</name>
  <version>0.0.0</version>
  <description>The two robots package</description>
  <maintainer email="ismikhaylov@yandex.ru">ismik</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
