<?xml version="1.0"?>
<package>
  <name>lr3</name>
  <version>0.0.0</version>
  <description>The 3 package</description>

  <maintainer email="hozyain@todo.todo">hozyain</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	
  </export>
</package>
