<?xml version="1.0"?>
<package>
  <name>lab4</name>
  <version>0.1.0</version>

  <license>TODO</license>

  <maintainer email="nmishnev@todo.todo">nmishnev</maintainer>

  <description>The lab4 package</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
